--- a/p8105_hw3_js6177.md
+++ b/p8105_hw3_js6177.md
@@ -125,15 +125,24 @@ instacart %>%
 
 The code below reads the data, cleans the variables’ names, create a
 variable `day_type` that specifies weekday or weekend of the associated
-day, convert `day` into a factor variable and arrange the columns to
-produce the final dataset.
+day, convert `day_type` and `day` into factor variables. I then pivot
+the dataset form wide to long, transforming all of those 1,440 columns
+into just two columns: `activity_num` and `activity_count`. I then
+arrange the columns to produce the final dataset.
 
 ``` r
 accel = read_csv("data/accel_data.csv") %>% 
   janitor::clean_names() %>% 
   mutate(
     day_type = ifelse(day %in% c("Sunday","Saturday"),"weekend","weekday"),
+    day_type = as.factor(day_type),
     day = as.factor(day)
+  ) %>% 
+  pivot_longer(
+    activity_1:activity_1440,
+    names_to = "activity_num",
+    names_prefix = "activity_",
+    values_to = "activity_count"
   ) %>% 
   select(week,day_id,day,day_type,everything())
 ```
@@ -147,10 +156,13 @@ accel = read_csv("data/accel_data.csv") %>%
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-The resulting dataset has 35 observations and 1444 variables, including
-`week` (week number), `day_id` (day identifier), a factor variable `day`
-(Mon-Sun), a character variable `day_type` (weekday vs weekend) and
-`activity_*` (activity counts for each minute of a 24-hour day).
+The resulting dataset has 50400 observations and 6 variables. Each row
+shows activity counts for each minute of a specific day. Variables
+including `week` (week number), `day_id` (day identifier), a factor
+variable `day` (Mon-Sun), a factor variable `day_type` (weekday vs
+weekend), `activity_num` which is the minute of the day ranging from 1
+to 1440, `activity_count` the activity count of that minute on the
+associated day.
 
 ### total activity
 
@@ -159,52 +171,75 @@ activity counts for each minute of the associated day.
 
 ``` r
 accel %>% 
-  mutate(
-    total_activity = select(.,starts_with("activity_")) %>% rowSums(na.rm = T)
-         ) %>% 
-  select(day_id,total_activity) %>% 
-  knitr::kable(col.names = c("Day id","Total activity counts"))
+  group_by(day_id) %>% 
+  summarise(total_activity = sum(activity_count)) %>%
+  knitr::kable(col.names = c("Day id","Total activity counts"),digit = 1)
 ```
 
 | Day id | Total activity counts |
 |-------:|----------------------:|
-|      1 |             480542.62 |
-|      2 |              78828.07 |
-|      3 |             376254.00 |
-|      4 |             631105.00 |
-|      5 |             355923.64 |
-|      6 |             307094.24 |
-|      7 |             340115.01 |
-|      8 |             568839.00 |
-|      9 |             295431.00 |
-|     10 |             607175.00 |
-|     11 |             422018.00 |
-|     12 |             474048.00 |
-|     13 |             423245.00 |
-|     14 |             440962.00 |
-|     15 |             467420.00 |
-|     16 |             685910.00 |
-|     17 |             382928.00 |
-|     18 |             467052.00 |
-|     19 |             371230.00 |
-|     20 |             381507.00 |
-|     21 |             468869.00 |
-|     22 |             154049.00 |
-|     23 |             409450.00 |
-|     24 |               1440.00 |
-|     25 |             260617.00 |
-|     26 |             340291.00 |
-|     27 |             319568.00 |
-|     28 |             434460.00 |
-|     29 |             620860.00 |
-|     30 |             389080.00 |
-|     31 |               1440.00 |
-|     32 |             138421.00 |
-|     33 |             549658.00 |
-|     34 |             367824.00 |
-|     35 |             445366.00 |
+|      1 |              480542.6 |
+|      2 |               78828.1 |
+|      3 |              376254.0 |
+|      4 |              631105.0 |
+|      5 |              355923.6 |
+|      6 |              307094.2 |
+|      7 |              340115.0 |
+|      8 |              568839.0 |
+|      9 |              295431.0 |
+|     10 |              607175.0 |
+|     11 |              422018.0 |
+|     12 |              474048.0 |
+|     13 |              423245.0 |
+|     14 |              440962.0 |
+|     15 |              467420.0 |
+|     16 |              685910.0 |
+|     17 |              382928.0 |
+|     18 |              467052.0 |
+|     19 |              371230.0 |
+|     20 |              381507.0 |
+|     21 |              468869.0 |
+|     22 |              154049.0 |
+|     23 |              409450.0 |
+|     24 |                1440.0 |
+|     25 |              260617.0 |
+|     26 |              340291.0 |
+|     27 |              319568.0 |
+|     28 |              434460.0 |
+|     29 |              620860.0 |
+|     30 |              389080.0 |
+|     31 |                1440.0 |
+|     32 |              138421.0 |
+|     33 |              549658.0 |
+|     34 |              367824.0 |
+|     35 |              445366.0 |
 
 From the table, I cannot see any apparent trend.
+
+The table below shows the number of day and the total activity counts
+for the associated day, which is orded by the total activity counts.
+
+``` r
+accel %>% 
+  group_by(day) %>% 
+  summarise(day_count = n()/1440,
+            total_activity = sum(activity_count)) %>% 
+  arrange(desc(total_activity)) %>% 
+  knitr::kable()
+```
+
+| day       | day_count | total_activity |
+|:----------|----------:|---------------:|
+| Friday    |         5 |        2291711 |
+| Wednesday |         5 |        2129772 |
+| Thursday  |         5 |        2091151 |
+| Sunday    |         5 |        1919213 |
+| Monday    |         5 |        1858699 |
+| Tuesday   |         5 |        1799238 |
+| Saturday  |         5 |        1369237 |
+
+From this table, I can see that the activity counts fluctuate throughout
+the week.
 
 ### Plot
 
@@ -216,52 +251,59 @@ each day of the week.
 
 ``` r
 accel %>%  
-  pivot_longer(
-    activity_1:activity_1440,
-    names_to = "activity_min",
-    names_prefix = "activity_",
-    values_to = "min_count"
-  ) %>%  
+  ggplot(aes(x = activity_num, y = activity_count, color = day)) +
+  geom_point()+
+  geom_line()+
+  labs(
+    title = "Plot of 24-hour activity time courses",
+    x = "Time (minute)",
+    y = "Activity counts"
+  )+
+  scale_color_discrete(name = "Day of the week")
+```
+
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+Since the plot is too messy, I convert the unit of x-axis from minute to
+hour.
+
+``` r
+accel %>%  
   mutate(
-    activity_min = as.integer(activity_min),
-    activity_hr = activity_min %/% 60
+    activity_num = as.integer(activity_num),
+    activity_hr = activity_num %/% 60
   ) %>% 
   group_by(day,activity_hr) %>% 
-  mutate(hr_count = sum(min_count)) %>% 
+  mutate(hr_count = sum(activity_count)) %>% 
   
   ggplot(aes(x = activity_hr, y = hr_count, color = day)) +
   geom_point()+
   geom_line()+
   labs(
     title = "Plot of 24-hour activity time courses",
-    x = "Activity time (hour)",
+    x = "Time (hour)",
     y = "Activity counts"
   )+
   scale_color_discrete(name = "Day of the week")
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
-Most activity happened between 6:00-22:00. On Monday and Friday night
-(20:00-21:00) as well as Saturday morning (9:00-11:00) we see spikes in
-activity counts. Activity is very low on Sunday. I then group dataset by
-`day_type` and the graph below clearly shows that the mean activity
-count of weekend is lower than that of weekday.
+From the plot, we can see that most activity happened between
+6:00-22:00. On Monday and Friday night (20:00-21:00) as well as Saturday
+morning (9:00-11:00) we see spikes in activity counts. Activity is very
+low on Sunday. I then group dataset by `day_type` and the graph below
+clearly shows that the mean activity count of weekend is lower than that
+of weekday.
 
 ``` r
 accel %>%  
-  pivot_longer(
-    activity_1:activity_1440,
-    names_to = "activity_min",
-    names_prefix = "activity_",
-    values_to = "min_count"
-  ) %>%  
   mutate(
-    activity_min = as.integer(activity_min),
-    activity_hr = activity_min %/% 60
+    activity_num = as.integer(activity_num),
+    activity_hr = activity_num %/% 60
   ) %>% 
   group_by(day_type,activity_hr) %>% 
-  mutate(hr_count = sum(min_count),
+  mutate(hr_count = sum(activity_count),
          mean_hr_count = mean(hr_count)
          ) %>% 
   
@@ -270,7 +312,7 @@ accel %>%
   geom_line()+
   labs(
     title = "Plot of 24-hour activity time courses",
-    x = "Activity time (hour)",
+    x = "Time (hour)",
     y = "Mean activity counts"
   )+
   viridis::scale_color_viridis(
@@ -278,7 +320,7 @@ accel %>%
     discrete = TRUE) 
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
 ## Problem 3
 
@@ -362,7 +404,7 @@ code to calculate median).
 
 I use `group_by` based on `id`, `year` and `month` to calculate the
 average max temperature in January and July in each station
-respectively, and make a two-panel scatter plot to show the average
+respectively, and make a two-panel Spaghetti plot to show the average
 `tmax` across years.
 
 ``` r
@@ -374,7 +416,7 @@ ny_noaa_tidy %>%
   filter(!(is.na(avg_tmax))) %>% 
   
   ggplot(aes(x = year, y = avg_tmax, color = id))+
-  geom_point(alpha = .1) +
+  geom_line() +
   facet_grid(month ~., scales = "free_y") +
   labs(
     title = "Average maximum temperature in Jan and Jul in each station",
@@ -386,7 +428,7 @@ ny_noaa_tidy %>%
   theme(legend.position = "none")
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 From the plot, it seems that both the distributions are normal. The
 average max temperature in January centers around -0.2C while that in
@@ -409,7 +451,7 @@ ny_noaa_tidy %>%
     caption = "Data from NOAA")
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
 Therefore, I can find the outliers for average max temperature in
 January and July respectively using the following code.
@@ -505,7 +547,7 @@ snowfall =
 tmax_tmin + snowfall
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-19-1.png)<!-- -->
 
 From the plot `tmax_tmin`, we can see that there are some outliers,
 where extreme temperatures are reached. This may be because of wrong
