Final Change Never change

--- a/p8105_hw3_js6177.md
+++ b/p8105_hw3_js6177.md
@@ -166,8 +166,8 @@ associated day.
 
 ### total activity
 
-The code belows create a variable `total_activity` by summing up the
-activity counts for each minute of the associated day.
+The code below creates a variable `total_activity` by summing up the
+activity counts for all the minute of the associated day.
 
 ``` r
 accel %>% 
@@ -217,7 +217,7 @@ accel %>%
 From the table, I cannot see any apparent trend.
 
 The table below shows the number of day and the total activity counts
-for the associated day, which is orded by the total activity counts.
+for the associated day, which is ordered by the total activity counts.
 
 ``` r
 accel %>% 
@@ -243,11 +243,8 @@ the week.
 
 ### Plot
 
-The codes below convert the original dataset from wide to long, and
-create a variable `hr_activity` which is the summation of the activity
-counts for each minute within that hour. I then group dataset by `day`
-and `activity_hr` and make a plot of 24-hour activity time courses of
-each day of the week.
+The codes below shows the 24-hour activity time courses for each day and
+use color to indicate day of the week.
 
 ``` r
 accel %>%  
@@ -259,6 +256,7 @@ accel %>%
     x = "Time (minute)",
     y = "Activity counts"
   )+
+  scale_x_discrete(breaks = seq(1,1440))+
   scale_color_discrete(name = "Day of the week")
 ```
 
