Final change Never change

--- a/p8105_hw3_js6177.md
+++ b/p8105_hw3_js6177.md
@@ -144,6 +144,7 @@ accel = read_csv("data/accel_data.csv") %>%
     names_prefix = "activity_",
     values_to = "activity_count"
   ) %>% 
+  mutate(activity_num = as.numeric(activity_num)) %>% 
   select(week,day_id,day,day_type,everything())
 ```
 
@@ -256,7 +257,6 @@ accel %>%
     x = "Time (minute)",
     y = "Activity counts"
   )+
-  scale_x_discrete(breaks = seq(1,1440))+
   scale_color_discrete(name = "Day of the week")
 ```
 
